Server/kubernetsServ/config/kubernetes-dashboard-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-nodeport
  namespace: kubernetes-dashboard
spec:
  type: NodePort
  selector:
    app: kubernetes-dashboard-kong
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 30443
