Server/kubernetsServ/config/monitor-namespace.yaml
vim kube-state-metrics.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-state-metrics
  namespace: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-state-metrics
  template:
    metadata:
      labels:
        app: kube-state-metrics
    spec:
      serviceAccountName: kube-state-metrics
      containers:
      - name: kube-state-metrics
        image: registry.cn-wulanchabu.aliyuncs.com/moge1/kube-state-metrics:v2.3.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: 'true'
  name: kube-state-metrics
  namespace: prometheus
  labels:
    app: kube-state-metrics
spec:
  ports:
  - name: kube-state-metrics
    port: 8080
    protocol: TCP
  selector:
    app: kube-state-metrics


# registry.cn-wulanchabu.aliyuncs.com/moge1/kube-state-metrics:v2.3.1
# registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.17.0
